# intent-main-c2

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/gpio/: CMakeLists.txt  gpio.c  gpio.h
components/lsm6dsr/: CMakeLists.txt  lsm6dsr.c  lsm6dsr.h
components/rtos_tasks/: CMakeLists.txt  class_example.c  intent_mqtt.c  intent_mqtt.h  rtos_tasks.c  rtos_tasks.h  state_machine.c  state_machine.h  test  test.c
components/state_machine/: sleep_state.c
components/state_machines/: CMakeLists.txt  NetworkStateMachineTask.c  NetworkStateMachineTask.h  SensorStateMachineTask.c  SensorStateMachineTask.h  active_state.c  network_active_state.c  network_inactive_state.c  ready_state.c  running_state.c  sleep_state.c  sleep_state2.c
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  intent-main-c2.c  test  test.c  test2  test2.c
